--- a/index.html
+++ b/index.html
@@ -149,6 +149,40 @@
     .btn, .btn::after{ animation: none !important; }
     .reveal{ opacity: 1 !important; transform: none !important; transition: none !important; }
   }
+
+  /* ✅ Floating buttons (call + whatsapp) */
+  .fab-wrap{
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    z-index: 1200;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .fab{
+    width: 52px;
+    height: 52px;
+    border-radius: 999px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.10);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    box-shadow: 0 14px 35px rgba(0,0,0,.35);
+  }
+  .fab:active{ transform: translateY(1px); }
+  .fab svg{ width: 22px; height: 22px; }
+  .fab--call{
+    background: rgba(37,99,235,.22);
+    border-color: rgba(37,99,235,.35);
+  }
+  .fab--wa{
+    background: rgba(34,197,94,.18);
+    border-color: rgba(34,197,94,.35);
+  }
 </style>
 </head>
 
@@ -487,6 +521,27 @@
       <div id="modalStatus" class="text-xs text-white/60"></div>
     </form>
   </div>
+</div>
+
+<!-- ✅ Fixed action buttons: Call + WhatsApp -->
+<div class="fab-wrap" aria-label="Контакты">
+  <a class="fab fab--call" href="tel:0999211000" aria-label="Позвонить 0999211000" title="Позвонить">
+    <!-- phone icon -->
+    <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.02-.24c1.12.37 2.33.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1C10.85 21 3 13.15 3 3a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.24.2 2.45.57 3.57a1 1 0 0 1-.24 1.02l-2.21 2.2Z" stroke="white" stroke-opacity=".9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
+
+  <a class="fab fab--wa"
+     href="https://wa.me/996999211000?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%2C%20%D1%85%D0%BE%D1%82%D0%B5%D0%BB%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D0%B2%D1%82%D0%BE"
+     target="_blank" rel="noopener"
+     aria-label="Написать в WhatsApp" title="WhatsApp">
+    <!-- whatsapp icon -->
+    <svg viewBox="0 0 32 32" fill="none" aria-hidden="true">
+      <path d="M19.11 17.53c-.23-.12-1.33-.66-1.54-.74-.2-.08-.35-.12-.5.12-.15.23-.58.74-.71.89-.13.15-.26.17-.49.06-.23-.12-.97-.36-1.85-1.15-.68-.61-1.14-1.36-1.27-1.59-.13-.23-.01-.36.1-.48.1-.1.23-.26.35-.39.12-.13.15-.23.23-.39.08-.15.04-.29-.02-.41-.06-.12-.5-1.2-.69-1.65-.18-.43-.37-.37-.5-.37h-.43c-.15 0-.39.06-.59.29-.2.23-.78.76-.78 1.85s.8 2.14.91 2.29c.12.15 1.58 2.42 3.82 3.39.53.23.95.37 1.27.47.54.17 1.03.15 1.42.09.43-.06 1.33-.54 1.52-1.06.18-.52.18-.97.13-1.06-.05-.09-.2-.15-.43-.27Z" fill="white" fill-opacity=".9"/>
+      <path d="M26.67 15.76c0 5.99-4.89 10.85-10.92 10.85-1.92 0-3.73-.49-5.3-1.36L5.33 26.67l1.46-4.85a10.75 10.75 0 0 1-1.38-5.23C5.41 10.6 10.3 5.74 16.33 5.74c6.03 0 10.34 4.03 10.34 10.02Z" stroke="white" stroke-opacity=".9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
 </div>
 
 <script>
