--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
 <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 <link rel="dns-prefetch" href="https://res.cloudinary.com">
 
+<!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;
+  n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];
+  t=b.createElement(e);t.async=!0;
+  t.src=v;
+  s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}
+  (window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '902865135723871');
+  fbq('track', 'PageView');
+</script>
+<noscript>
+  <img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=902865135723871&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+
 <style>
   body{
     font-family: Manrope, sans-serif;
@@ -330,7 +353,7 @@
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image_upload/f_auto,q_auto,w_1100/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW M5</div>
@@ -425,7 +448,7 @@
       <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
         <div class="text-sm font-extrabold">Тимур</div>
         <div class="mt-2 text-sm text-white/70 leading-relaxed">
-          “Аккуратный подход. Всё прозрачно, без сюрпризов. Рекомендую.”
+          “Акратный подход. Всё прозрачно, без сюрпризов. Рекомендую.”
         </div>
         <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
       </article>
@@ -533,7 +556,7 @@
   </a>
 
   <a class="fab fab--wa"
-     href="https://wa.me/996999211000?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%2C%20%D1%85%D0%BE%D1%82%D0%B5%D0%BB%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D0%B2%D1%82%D0%BE"
+     href="https://wa.me/996999211000?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0й%D1%82%D0%B0%2C%20%D1%85%D0%BE%D1%82%D0%B5%D0%BB%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D0%B2%D1%82%D0%BE"
      target="_blank" rel="noopener"
      aria-label="Написать в WhatsApp" title="WhatsApp">
     <!-- whatsapp icon -->
