--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
     <div class="text-xs text-white/60 font-semibold tracking-wide">О НАС</div>
     <h2 class="mt-2 text-2xl font-black">LUXAR AUTORENT</h2>
     <p class="mt-4 text-white/70 leading-relaxed max-w-2xl">
-      В автопарке 13 премиальных автомобилей — под любой формат:
+      В автопарке более 15и премиальных автомобилей — под любой формат:
       от деловых встреч до комфортного отдыха.
-      У нас премиальные авто по одним из лучших цен в городе.
+      Сочетаем безупречный сервис и выгодную стоимость
       <span class="text-white font-semibold">Ваш комфорт – наш стандарт.</span>
     </p>
   </div>
@@ -279,7 +279,7 @@
   <div class="mt-12 grid grid-cols-2 lg:grid-cols-4 gap-8">
     <div>
       <div class="text-2xl font-black text-white/90">01</div>
-      <div class="mt-2 font-semibold">13 авто</div>
+      <div class="mt-2 font-semibold">более 15и  авто</div>
       <div class="text-white/50 text-sm mt-1">Премиальный автопарк</div>
     </div>
     <div>
