--- a/index.html
+++ b/index.html
@@ -277,26 +277,47 @@
   </div>
 
   <div class="mt-12 grid grid-cols-2 lg:grid-cols-4 gap-8">
+
     <div>
-      <div class="text-2xl font-black text-white/90">01</div>
-      <div class="mt-2 font-semibold">более 15и  авто</div>
+      <div class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 border border-white/20">
+        <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none">
+          <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
+      <div class="mt-2 font-semibold">более 15и авто</div>
       <div class="text-white/50 text-sm mt-1">Премиальный автопарк</div>
     </div>
+
     <div>
-      <div class="text-2xl font-black text-white/90">02</div>
+      <div class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 border border-white/20">
+        <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none">
+          <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
       <div class="mt-2 font-semibold">300+ клиентов</div>
       <div class="text-white/50 text-sm mt-1">Высокий уровень доверия</div>
     </div>
+
     <div>
-      <div class="text-2xl font-black text-white/90">03</div>
+      <div class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 border border-white/20">
+        <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none">
+          <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
       <div class="mt-2 font-semibold">КАСКО + ОСАГО</div>
       <div class="text-white/50 text-sm mt-1">Полная защита</div>
     </div>
+
     <div>
-      <div class="text-2xl font-black text-white/90">04</div>
+      <div class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 border border-white/20">
+        <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none">
+          <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
       <div class="mt-2 font-semibold">Тонировка</div>
       <div class="text-white/50 text-sm mt-1">С разрешением</div>
     </div>
+
   </div>
 </section>
 
