--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image_upload/f_auto,q_auto,w_1100/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW M5</div>
@@ -402,7 +402,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052286/photo_5425033390299221145_y_ligtxq.jpg');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052219/freepik__-__6911_gow3so.png');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X7</div>
@@ -416,7 +416,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052219/freepik__-__6911_gow3so.png');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052286/photo_5425033390299221145_y_ligtxq.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X5 G05</div>
