--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
         <!-- ✅ Политика конфиденциальности (под лидформой) -->
         <div class="text-[11px] leading-relaxed text-white/50">
           Нажимая кнопку, вы соглашаетесь с
-          <a href="#privacy" class="underline underline-offset-4 text-white/70 hover:text-white">
+          <a href="privacy.html" target="_blank" rel="noopener"
+             class="underline underline-offset-4 text-white/70 hover:text-white">
             политикой конфиденциальности
           </a>.
         </div>
@@ -317,7 +318,7 @@
     </div>
 
     <div>
-      <div class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 border border-white/20">
+      <div class="w-8 h-8 flex items-center justify-content:center rounded-full bg-white/10 border border-white/20">
         <svg viewBox="0 0 24 24" class="w-4 h-4" fill="none">
           <path d="M5 13l4 4L19 7" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
@@ -375,7 +376,8 @@
       <!-- ✅ Политика конфиденциальности (под лидформой) -->
       <div class="text-[11px] leading-relaxed text-white/50">
         Нажимая кнопку, вы соглашаетесь с
-        <a href="#privacy" class="underline underline-offset-4 text-white/70 hover:text-white">
+        <a href="privacy.html" target="_blank" rel="noopener"
+           class="underline underline-offset-4 text-white/70 hover:text-white">
           политикой конфиденциальности
         </a>.
       </div>
@@ -552,6 +554,7 @@
       <div class="flex gap-3">
         <a href="#lead1" class="underline underline-offset-4">Заявка</a>
         <a href="#fleet" class="underline underline-offset-4">Автопарк</a>
+        <a href="privacy.html" target="_blank" rel="noopener" class="underline underline-offset-4">Политика</a>
       </div>
     </div>
     <div class="mt-4 text-xs text-white/40">
@@ -583,7 +586,8 @@
       <!-- ✅ Политика конфиденциальности (под лидформой) -->
       <div class="text-[11px] leading-relaxed text-white/50">
         Нажимая кнопку, вы соглашаетесь с
-        <a href="#privacy" class="underline underline-offset-4 text-white/70 hover:text-white">
+        <a href="privacy.html" target="_blank" rel="noopener"
+           class="underline underline-offset-4 text-white/70 hover:text-white">
           политикой конфиденциальности
         </a>.
       </div>
@@ -601,7 +605,7 @@
   </a>
 
   <a class="fab fab--wa"
-     href="https://wa.me/996999211000?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0й%D1%82%D0%B0%2C%20%D1%85%D0%BE%D1%82%D0%B5%D0%BB%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D0%B2%D1%82%D0%BE"
+     href="https://wa.me/996999211000?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%21%20%D0%AF%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%2C%20%D1%85%D0%BE%D1%82%D0%B5%D0%BB%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D1%80%D0%B5%D0%BD%D0%B4%D1%8B."
      target="_blank" rel="noopener"
      aria-label="Написать в WhatsApp" title="WhatsApp">
     <!-- whatsapp icon -->
@@ -610,60 +614,6 @@
       <path d="M26.67 15.76c0 5.99-4.89 10.85-10.92 10.85-1.92 0-3.73-.49-5.3-1.36L5.33 26.67l1.46-4.85a10.75 10.75 0 0 1-1.38-5.23C5.41 10.6 10.3 5.74 16.33 5.74c6.03 0 10.34 4.03 10.34 10.02Z" stroke="white" stroke-opacity=".9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
   </a>
-</div>
-
-<!-- ✅ Privacy Policy Modal -->
-<div id="privacyModal" class="modal-backdrop" aria-hidden="true">
-  <div class="modal-card p-6">
-    <div class="flex items-start justify-between gap-4">
-      <div>
-        <div class="text-xs text-white/60 font-semibold tracking-wide">ДОКУМЕНТ</div>
-        <div class="mt-2 text-2xl font-black">Политика конфиденциальности</div>
-        <div class="mt-2 text-sm text-white/60">Как мы обрабатываем ваши данные</div>
-      </div>
-      <button id="privacyClose" class="modal-x" type="button" aria-label="Закрыть">✕</button>
-    </div>
-
-    <div class="mt-5 text-sm text-white/70 leading-relaxed space-y-3" id="privacy">
-      <p>
-        Настоящая политика конфиденциальности описывает, какие данные мы получаем через формы на сайте и как мы их используем.
-      </p>
-
-      <p class="font-semibold text-white/85">1) Какие данные мы собираем</p>
-      <p>
-        Имя, номер телефона и (при необходимости) выбранный автомобиль — только те данные, которые вы вводите в формы на сайте.
-      </p>
-
-      <p class="font-semibold text-white/85">2) Зачем мы собираем данные</p>
-      <p>
-        Чтобы связаться с вами, уточнить детали аренды, подтвердить наличие авто и условия.
-      </p>
-
-      <p class="font-semibold text-white/85">3) Как мы храним и кому передаём</p>
-      <p>
-        Данные используются только сотрудниками LUXAR AUTORENT для обработки заявки.
-        Мы не продаём и не передаём ваши данные третьим лицам, кроме случаев, предусмотренных законом.
-      </p>
-
-      <p class="font-semibold text-white/85">4) Срок хранения</p>
-      <p>
-        Данные хранятся столько, сколько нужно для обработки заявки и коммуникации по ней, либо до вашего запроса на удаление.
-      </p>
-
-      <p class="font-semibold text-white/85">5) Ваши права</p>
-      <p>
-        Вы можете запросить изменение или удаление ваших данных, написав нам в WhatsApp или позвонив по номеру, указанному на сайте.
-      </p>
-
-      <p class="text-xs text-white/45">
-        Обновлено: 2026
-      </p>
-    </div>
-
-    <div class="mt-6 flex justify-end">
-      <button id="privacyOk" class="btn-ghost text-sm" type="button">Понятно</button>
-    </div>
-  </div>
 </div>
 
 <script>
@@ -728,9 +678,8 @@
     payload.source = "Лидформа 1";
 
     const ok = await sendLead(payload);
-if (ok && typeof fbq !== 'undefined') {
-  fbq('track', 'Lead');
-}
+    if (ok && typeof fbq !== 'undefined') { fbq('track', 'Lead'); }
+
     status.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
     if (ok) form.reset();
 
@@ -758,10 +707,8 @@ if (ok && typeof fbq !== 'undefined') {
     payload.source = "Лидформа 2";
 
     const ok = await sendLead(payload);
+    if (ok && typeof fbq !== 'undefined') { fbq('track', 'Lead'); }
 
-if (ok && typeof fbq !== 'undefined') {
-  fbq('track', 'Lead');
-}
     status.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
     if (ok) form.reset();
 
@@ -793,84 +740,46 @@ if (ok && typeof fbq !== 'undefined') {
   modalBackdrop.addEventListener('click', (e) => { if (e.target === modalBackdrop) closeModal(); });
   document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeModal(); });
 
-document.querySelectorAll('.js-open-modal').forEach(btn => {
-  btn.addEventListener('click', () => {
-
-    if (typeof fbq !== 'undefined') {
-      fbq('track', 'AddToCart');
-    }
-
-    openModal(btn.dataset.car || "Автопарк");
-  });
-});
-
-  // Modal submit — быстрый UI
- document.getElementById('modalForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
-  const form = e.target;
-  const btn = form.querySelector('button[type="submit"]');
-
-  const phone = document.getElementById('modalPhone').value;
-  if (!isPhoneValid(phone)) { 
-    modalStatus.textContent = "Проверьте номер телефона"; 
-    return; 
-  }
-
-  btn.disabled = true;
-  const oldText = btn.textContent;
-  btn.textContent = "Отправляем…";
-  modalStatus.textContent = "";
-
-  const fd = new FormData(form);
-  const payload = Object.fromEntries(fd.entries());
-  payload.source = "Автопарк";
-
-  const ok = await sendLead(payload);
-
-  if (ok && typeof fbq !== 'undefined') {
-    fbq('track', 'Lead');
-  }
-
-  modalStatus.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
-
-  if (ok) {
-    form.reset();
-    setTimeout(closeModal, 400);
-  }
-
-  btn.disabled = false;
-  btn.textContent = oldText;
-});
-
-  // ✅ Privacy modal open/close (по клику на ссылку)
-  const privacyModal = document.getElementById('privacyModal');
-  const privacyClose = document.getElementById('privacyClose');
-  const privacyOk = document.getElementById('privacyOk');
-
-  function openPrivacy(){
-    privacyModal.classList.add('open');
-    privacyModal.setAttribute('aria-hidden','false');
-  }
-  function closePrivacy(){
-    privacyModal.classList.remove('open');
-    privacyModal.setAttribute('aria-hidden','true');
-  }
-
-  // перехватываем все ссылки на #privacy
-  document.querySelectorAll('a[href="#privacy"]').forEach(a => {
-    a.addEventListener('click', (e) => {
-      e.preventDefault();
-      openPrivacy();
+  document.querySelectorAll('.js-open-modal').forEach(btn => {
+    btn.addEventListener('click', () => {
+      if (typeof fbq !== 'undefined') { fbq('track', 'AddToCart'); }
+      openModal(btn.dataset.car || "Автопарк");
     });
   });
 
-  privacyClose.addEventListener('click', closePrivacy);
-  privacyOk.addEventListener('click', closePrivacy);
-  privacyModal.addEventListener('click', (e) => { if (e.target === privacyModal) closePrivacy(); });
-  document.addEventListener('keydown', (e) => {
-    if (e.key === 'Escape'){
-      if (privacyModal.classList.contains('open')) closePrivacy();
+  // Modal submit — быстрый UI
+  document.getElementById('modalForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const form = e.target;
+    const btn = form.querySelector('button[type="submit"]');
+
+    const phone = document.getElementById('modalPhone').value;
+    if (!isPhoneValid(phone)) {
+      modalStatus.textContent = "Проверьте номер телефона";
+      return;
     }
+
+    btn.disabled = true;
+    const oldText = btn.textContent;
+    btn.textContent = "Отправляем…";
+    modalStatus.textContent = "";
+
+    const fd = new FormData(form);
+    const payload = Object.fromEntries(fd.entries());
+    payload.source = "Автопарк";
+
+    const ok = await sendLead(payload);
+    if (ok && typeof fbq !== 'undefined') { fbq('track', 'Lead'); }
+
+    modalStatus.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
+
+    if (ok) {
+      form.reset();
+      setTimeout(closeModal, 400);
+    }
+
+    btn.disabled = false;
+    btn.textContent = oldText;
   });
 
   // Reveal
@@ -894,4 +803,3 @@ document.querySelectorAll('.js-open-modal').forEach(btn => {
 
 </body>
 </html>
-
